--- a/style.css
+++ b/style.css
@@ -6,8 +6,9 @@ body {
 }
 
 .container {
-  width: 1140px;
+  max-width: 1140px;
   margin: 0 auto;
+  padding: 0 16px;
 }
 
 .nav .container {
@@ -44,7 +45,7 @@ body {
 }
 
 .ctas a {
-  flex-shrink: 0;
+  display: inline-block;
   font-weight: 600;
   text-decoration: none;
   padding: 10px 25px;
@@ -61,9 +62,148 @@ body {
 .hero-headline {
   font-size: 36px;
   font-weight: 600;
-  width: 653px;
+  max-width: 653px;
   text-align: center;
   margin: 0 auto;
   line-height: 54px;
   color: #000;
+  margin-bottom: 15px;
+}
+
+.hero-subheadline {
+  font-weight: 400;
+  max-width: 553px;
+  line-height: 32px;
+  text-align: center;
+  margin: 0 auto;
+  color: rgba(0, 0, 0, 0.6);
+  margin-bottom: 40px;
+}
+
+.hero-ctas {
+  text-align: center;
+}
+
+.cta-primary,
+.cta-secondary {
+  padding: 12px 17px;
+}
+
+.cta-primary {
+  display: inline-block;
+  font-weight: 600;
+  text-decoration: none;
+  color: #fff;
+  background-color: #001aff;
+  box-shadow: 0px 15px 30px rgba(0, 26, 255, 0.2);
+  border-radius: 100px;
+}
+
+.cta-secondary {
+  font-weight: 600;
+  text-decoration: underline;
+  color: #001aff;
+}
+
+/* card */
+.jobs {
+  margin: 126px 0 96px 0;
+}
+
+.jobs-headline {
+  font-size: 16px;
+  font-weight: 600;
+  margin-bottom: 17px;
+}
+
+.jobs-list {
+  display: flex;
+  gap: 30px;
+}
+
+.job {
+  width: calc(100% / 3);
+  padding: 25px;
+  background-color: rgba(255, 255, 255, 0.6);
+  box-shadow: 0px 30px 60px rgba(0, 26, 255, 0.1);
+  border-radius: 8px;
+  transition: all 0.6s;
+}
+
+.job:hover {
+  background: #001aff;
+}
+
+.job:hover .job-title,
+.job:hover .job-tag,
+.job:hover .job-salary {
+  color: #fff;
+}
+
+.job:hover .job-company,
+.job:hover .job-description {
+  color: rgba(255, 255, 255, 0.8);
+}
+
+.job-header {
+  display: flex;
+  align-items: center;
+}
+
+.job-logo {
+  flex-shrink: 0;
+  width: 50px;
+  height: 50px;
+  border: 0.5px solid rgba(0, 0, 0, 0.1);
+  border-radius: 8px;
+}
+
+.job-meta {
+  margin-left: 13px;
+}
+
+.job-title {
+  font-size: 18px;
+  font-weight: 600;
+  margin: 0;
+}
+
+.job-company {
+  font-size: 14px;
+  font-weight: 400;
+  margin: 0;
+  color: rgba(0, 0, 0, 0.6);
+}
+
+.job-description {
+  font-size: 16px;
+  font-weight: 400;
+  color: rgba(0, 0, 0, 0.6);
+  margin: 20px 0;
+  line-height: 20px;
+}
+
+.job-devider {
+  color: rgba(0, 0, 0, 0.1);
+}
+
+.job-footer {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  margin-top: 20px;
+}
+
+.job-tag {
+  font-size: 12px;
+  font-weight: 600;
+  padding: 5px 15px;
+  background-color: rgba(0, 0, 0, 0.07);
+  border-radius: 100px;
+  display: inline-block;
+}
+
+.job-salary {
+  font-size: 14px;
+  font-weight: 600;
 }
